--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "back-end-project3",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.11.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +26,6 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.4"
-  }
+  },
+  "devDependencies": {}
 }
